<?xml version="1.0"?>
<package>
  <name>pal_camera_client</name>
  <version>0.1.2</version>
  <description>A simple way to get on demand image and intrinsic parameters from a ROS camera publisher.
               It works for both monocular and stereo cameras.</description>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
